test/interaction/Issue7842.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals*" "?0 : f x ≡ f y" nil)
((last . 1) . (agda2-goals-action '(0)))
(agda2-give-action 0 'no-paren)
(agda2-status-action "")
(agda2-info-action "*All Goals, Errors*" "?1 : _x_36 ≡ y ?2 : x ≡ _x_36 → f x ≡ f _x_36 _p_34 : Agda.Primitive.Level [ at Issue7842.agda:17.21-26 ] _x_36 : A [ at Issue7842.agda:17.21-26 ] ———— Error ————————————————————————————————————————————————— error: [UnsolvedConstraints] Failed to solve the following constraints: b =< _p_34 (blocked on _p_34) a =< _p_34 (blocked on _p_34) a Agda.Primitive.⊔ b = _p_34 (blocked on _p_34)" nil)
((last . 1) . (agda2-goals-action '(1 2)))
